# rustscript-embedded

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish-crates.yml
ci/: measure-size.sh  run-qemu-raspi0.sh
include/: rustscript_embedded.h
platformio/rp2040/: .gitignore  platformio.ini
platformio/rp2040/programs/: blinky.rss
platformio/rp2040/scripts/: build_rust.py
platformio/rp2040/src/: main.cpp
ports/raspi-zero/: README.md  boot.S  frozen_blinky.c  linker.ld
src/: allocator.rs  ffi.rs  host.rs  lib.rs
tests/: ffi.rs
