[package]
name = "rustscript-embedded"
version = "0.1.0"
edition = "2024"
description = "Embedded-facing RustScript runner examples with JIT disabled"
license = "MIT"
homepage = "https://rustscript.org/"
repository = "https://github.com/rustscript-lang/micro-rustscript"

[lib]
crate-type = ["rlib", "staticlib"]

[features]
default = ["host"]
host = ["dep:vm", "vm/runtime"]
rp2040 = ["dep:pd_vm_nostd"]

[dependencies]
pd_vm_nostd = { package = "pd-vm-nostd", path = "../rustscript/pd-vm-nostd", version = "0.1.0", optional = true }
vm = { package = "pd-vm", path = "../rustscript", version = "0.1.0", default-features = false, optional = true }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.min-size]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
